--- a/streampipes-extensions/streampipes-connect-adapters/pom.xml
+++ b/streampipes-extensions/streampipes-connect-adapters/pom.xml
@@ -33,17 +33,17 @@
             <dependency>
                 <groupId>org.apache.streampipes</groupId>
                 <artifactId>streampipes-connect-container-worker</artifactId>
-                <version>${streampipes.version}</version>
+                <version>0.69.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.streampipes</groupId>
                 <artifactId>streampipes-pipeline-elements-shared</artifactId>
-                <version>${streampipes.version}</version>
+                <version>0.69.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.streampipes</groupId>
                 <artifactId>streampipes-container-extensions</artifactId>
-                <version>${streampipes.version}</version>
+                <version>0.69.0-SNAPSHOT</version>
             </dependency>
 
             <!-- External dependencies -->
