--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           node-version: '16.x'
       - name: Build with Maven
-        run: mvn clean install javadoc:aggregate
+        run: mvn clean package -Dmaven.test.skip=true
       - name: Set env variables for Docker builds
         run: |
           echo "DOCKER_CLI_EXPERIMENTAL=enabled" >> $GITHUB_ENV
