[STREAMPIPES-472] Reduce dependency overhead of extensions modules

--- a/pom.xml
+++ b/pom.xml
@@ -909,6 +909,7 @@
         <module>streampipes-wrapper-standalone</module>
         <module>streampipes-mail</module>
         <module>streampipes-resource-management</module>
+        <module>streampipes-sdk-bundle</module>
     </modules>
 
     <profiles>
