--- a/installer/compose/docker-compose.yml
+++ b/installer/compose/docker-compose.yml
@@ -100,7 +100,7 @@ services:
         ipv4_address: ${SP_CONSUL_CONTAINER_IP}
 
   couchdb:
-    image: fogsyio/couchdb:2.3.1
+    image: couchdb:2.3.1
     volumes:
       - couchdb:/opt/couchdb/data
     logging: *default-logging
