--- a/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
@@ -47,6 +47,12 @@
             <version>0.69.0-SNAPSHOT</version>
             <classifier>embed</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-connect-adapters-iiot</artifactId>
+            <version>0.69.0-SNAPSHOT</version>
+            <classifier>embed</classifier>
+        </dependency>
     </dependencies>
 
     <build>
