--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,44 @@ services:
     networks:
       spnet:
 
+  connect-connect-adapters-iiot:
+    build:
+      context: ./streampipes-extensions/streampipes-connect-adapters-iiot
+      dockerfile: Dockerfile
+      args:
+        BASE_IMAGE: adoptopenjdk/openjdk8-openj9:alpine
+    image: incubator-streampipes_connect-worker-main:release-validation
+    environment:
+      - SP_CONNECT_CONTAINER_HOST=backend
+      - SP_CONNECT_CONTAINER_WORKER=connect-adapters-iiot
+    logging: *default-logging
+    networks:
+      spnet:
+
+  pipeline-elements-all-jvm:
+    build:
+      context: ./streampipes-extensions/streampipes-pipeline-elements-all-jvm
+      dockerfile: Dockerfile
+      args:
+        BASE_IMAGE: adoptopenjdk/openjdk8-openj9:alpine
+    image: incubator-streampipes_pipeline-elements-all-jvm:release-validation
+    volumes:
+      - files:/spImages
+    logging: *default-logging
+    networks:
+      spnet:
+
+  pipeline-elements-all-flink:
+    build:
+      context: ./streampipes-extensions/streampipes-pipeline-elements-all-flink
+      dockerfile: Dockerfile
+      args:
+        BASE_IMAGE: adoptopenjdk/openjdk8-openj9:alpine
+    image: incubator-streampipes_pipeline-elements-all-flink:release-validation
+    logging: *default-logging
+    networks:
+      spnet:
+
   #### Mandatory external services
   activemq:
     image: fogsyio/activemq:5.15.9
