[hotfix] Add build step in GitHub actions to run rat plugin

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
+      - name: Validate code with rat plugin
+      - run: mvn rat:rat
       - name: Build with Maven
         run: mvn clean package -Dmaven.test.skip=true
       - name: Set env variables for Docker builds
