--- a/ui/package.json
+++ b/ui/package.json
@@ -85,8 +85,8 @@
     "rxjs": "6.6.2",
     "shepherd.js": "2.4.0",
     "showdown": "1.9.1",
-    "systemjs": "0.21.6",
     "swagger-ui": "^3.42.0",
+    "systemjs": "0.21.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -99,6 +99,7 @@
     "@types/angular": "^1.7.4",
     "@types/jasmine": "~3.6.0",
     "@types/jqueryui": "^1.12.13",
+    "@types/jshint": "^2.12.1",
     "@types/leaflet": "^1.5.19",
     "@types/node": "^12.19.3",
     "@types/rx": "^4.1.2",
