[STREAMPIPES-478] Add cypress to build pipeline

--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -45,3 +45,8 @@ jobs:
         run: mvn clean package -Dmaven.test.skip=true
       - name: Build and run streampipes
         run: docker-compose up --build -d
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          spec: cypress/tests/integration/adapter/*
