--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,8 @@
     "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --configuration production",
     "lint": "tslint -c tslint.json 'src/**/*.ts*",
     "analyze": "webpack-bundle-analyzer dist/stats.json",
-    "test-e2e": "cypress open"
+    "test-e2e": "cypress open",
+    "test-cypres": "npx cypress run --spec 'cypress/tests/integration/adapter/*'"
   },
   "dependencies": {
     "@angular/animations": "12.2.9",
