--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -30,17 +30,17 @@ jobs:
 #        uses: actions/setup-java@v1
 #        with:
 #          java-version: 1.8
-#      - name: Set up Node
-#        uses: actions/setup-node@v1
-#        with:
-#          node-version: '16.x'
-#      - name: Build UI
-#        working-directory: ./ui
-#        run: |
-#          NODE_PATH=/cache/node_modules
-#          NODE_OPTIONS=--max_old_space_size=6096
-#          npm install --unsafe-perm --legacy-peer-deps
-#          npm run build
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.x'
+      - name: Build UI
+        working-directory: ./ui
+        run: |
+          NODE_PATH=/cache/node_modules
+          NODE_OPTIONS=--max_old_space_size=6096
+          npm install --unsafe-perm --legacy-peer-deps
+          npm run build
 #      - name: Build with Maven
 #        run: mvn clean package -Dmaven.test.skip=true
 #      - name: Build and run streampipes
