--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -41,10 +41,21 @@ jobs:
           NODE_OPTIONS=--max_old_space_size=6096
           npm install --unsafe-perm --legacy-peer-deps
           npm run build
+
       - name: Build with Maven
         run: mvn clean package -Dmaven.test.skip=true
+
       - name: Build and run streampipes
         run: docker-compose up --build -d
+
+      - name: Wait till streampipes is started
+        uses: nev7n/wait_for_response@v1
+        with:
+          url: 'http://localhost/#/login'
+          responseCode: 200
+          timeout: 20000
+          interval: 500
+
       - name: Run Cypress Tests
         working-directory: ./ui
         run: |
