--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -26,32 +26,40 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Set up Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '16.x'
-      - name: Build UI
-        working-directory: ./ui
-        run: |
-          NODE_PATH=/cache/node_modules
-          NODE_OPTIONS=--max_old_space_size=6096
-          npm install --unsafe-perm --legacy-peer-deps
-          npm run build
 
-      - name: Build with Maven
-        run: mvn clean package -Dmaven.test.skip=true
+#      - name: Set up JDK 1.8
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
+#      - name: Set up Node
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: '16.x'
+#      - name: Build UI
+#        working-directory: ./ui
+#        run: |
+#          NODE_PATH=/cache/node_modules
+#          NODE_OPTIONS=--max_old_space_size=6096
+#          npm install --unsafe-perm --legacy-peer-deps
+#          npm run build
+#
+#      - name: Build with Maven
+#        run: mvn clean package -Dmaven.test.skip=true
+#
+#      - name: Build and run streampipes
+#        run: docker-compose up --build -d
 
-      - name: Build and run streampipes
-        run: docker-compose up --build -d
+      - name: Pull Docker
+        working-directory: ./installer/compose
+        run: docker-compose pull
+      - name: Start Docker
+        working-directory: ./installer/compose
+        run: docker-compose up -d
 
       - name: 'UI Tests'
         uses: cypress-io/github-action@v2
         with:
-          install: false
+          install: true
           wait-on: 'http://localhost:80'
           wait-on-timeout: 120
           spec: cypress/tests/**/*.smoke.ts
