--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -59,8 +59,8 @@ jobs:
       - name: 'UI Tests'
         uses: cypress-io/github-action@v2
         with:
-          install: true
-          wait-on: 'http://localhost:80'
+          install: false
+          wait-on: 'http://localhost/#/login'
           wait-on-timeout: 120
           spec: cypress/tests/**/*.smoke.ts
           working-directory: ui
