--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
-          node-version: '14'
+          node-version: '16.x'
       - name: Build UI
         working-directory: ./ui
         run: |
@@ -60,20 +60,27 @@ jobs:
         working-directory: ./installer/compose
         run: docker ps
 
-      - name: 'UI Tests'
+      - name: Wait 30 seconds
+        working-directory: ./installer/compose
+        run: sleep 30
+
+      - name: Docker PS
+        working-directory: ./installer/compose
+        run: docker ps
+
+        - name: 'UI Tests'
         uses: cypress-io/github-action@v2
         with:
           install: false
-          node-version: '14'
           wait-on: 'http://localhost/#/login'
           wait-on-timeout: 120
           spec: cypress/tests/**/*.smoke.ts
           working-directory: ui
 
-      - name: Run Cypress Tests
-        working-directory: ./ui
-        run: |
-          NODE_PATH=/cache/node_modules
-          NODE_OPTIONS=--max_old_space_size=6096
-          npm install --unsafe-perm --legacy-peer-deps
-          npm run test-cypress-github
+#      - name: Run Cypress Tests
+#        working-directory: ./ui
+#        run: |
+#          NODE_PATH=/cache/node_modules
+#          NODE_OPTIONS=--max_old_space_size=6096
+#          npm install --unsafe-perm --legacy-peer-deps
+#          npm run test-cypress-github
