--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
     "lint": "tslint -c tslint.json 'src/**/*.ts*",
     "analyze": "webpack-bundle-analyzer dist/stats.json",
     "test-e2e": "cypress open",
-    "test-cypress-github": "npx cypress run --spec 'cypress/tests/**/*.smoke.ts'"
+    "test-cypress-smoke": "npx cypress run --spec 'cypress/tests/**/*.smoke.spec.ts'",
+    "test-cypress-all": "npx cypress run --spec 'cypress/tests/**/*.ts'"
   },
   "dependencies": {
     "@angular/animations": "12.2.9",
