--- a/ui/package.json
+++ b/ui/package.json
@@ -16,7 +16,7 @@
     "analyze": "webpack-bundle-analyzer dist/stats.json",
     "test-e2e": "cypress open",
     "test-cypress-smoke": "npx cypress run --spec 'cypress/tests/**/*.smoke.spec.ts'",
-    "test-cypress-all": "npx cypress run --spec 'cypress/tests/**/*.ts'"
+    "test-cypress-all": "npx cypress run --spec 'cypress/tests/**/*.spec.ts'"
   },
   "dependencies": {
     "@angular/animations": "12.2.9",
