--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -59,5 +59,5 @@ jobs:
           install: false
           wait-on: 'http://localhost/#/login'
           wait-on-timeout: 120
-          spec: cypress/tests/**/*.spec.ts
+          spec: cypress/tests/**/*.smoke.spec.ts
           working-directory: ui
