--- a/streampipes-node-controller/Dockerfile
+++ b/streampipes-node-controller/Dockerfile
@@ -19,7 +19,7 @@ FROM $BASE_IMAGE
 
 MAINTAINER dev@streampipes.apache.org
 
-EXPOSE 7077
+EXPOSE 7077 9010
 ENV CONSUL_LOCATION consul
 
 # Comment:
@@ -31,4 +31,13 @@ RUN set -x; \
 
 COPY target/streampipes-node-controller.jar  /streampipes-node-controller.jar
 
-ENTRYPOINT ["java", "-jar", "/streampipes-node-controller.jar"]
+ENTRYPOINT ["java", \
+            "-Djava.rmi.server.hostname=ipe-streamnuc-2.fzi.de", \
+            "-Dcom.sun.management.jmxremote", \
+            "-Dcom.sun.management.jmxremote.port=9010", \
+            "-Dcom.sun.management.jmxremote.rmi.port=9010", \
+            "-Dcom.sun.management.jmxremote.local.only=false", \
+            "-Dcom.sun.management.jmxremote.ssl=false", \
+            "-Dcom.sun.management.jmxremote.authenticate=false", \
+            "-jar", \
+            "/streampipes-node-controller.jar"]
