[hotfix] Add cypress key to actions build

--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -58,6 +58,9 @@ jobs:
         with:
           install: false
           wait-on: 'http://localhost/#/login'
+          record: true
           wait-on-timeout: 120
-          spec: cypress/tests/**/*.smoke.spec.ts
+          spec: cypress/tests/**/*.spec.ts
           working-directory: ui
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
