--- a/archetypes/streampipes-archetype-extensions-jvm/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/streampipes-archetype-extensions-jvm/src/main/resources/archetype-resources/pom.xml
@@ -26,6 +26,7 @@
 
     <properties>
         <sp.version>0.69.0-SNAPSHOT</sp.version>
+        <spring.version>5.3.10</spring.version>
     </properties>
 
     <dependencies>
@@ -43,6 +44,11 @@
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-sources</artifactId>
             <version>${sp.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
 
