[STREAMPIPES-482] Files are not buffered in memory on download anymore

--- a/streampipes-client/pom.xml
+++ b/streampipes-client/pom.xml
@@ -76,6 +76,10 @@
             <artifactId>commons-collections</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
         </dependency>
