--- a/ui/package.json
+++ b/ui/package.json
@@ -111,8 +111,8 @@
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^0.28.11",
     "csv-string": "4.0.1",
-    "cypress": "^7.7.0",
-    "cypress-file-upload": "5.0.7",
+    "cypress": "^9.1.1",
+    "cypress-file-upload": "^5.0.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^3.2.0",
