--- a/streampipes-extensions/pom.xml
+++ b/streampipes-extensions/pom.xml
@@ -549,6 +549,12 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-test-utils_2.11</artifactId>
                 <version>${flink.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>log4j-slf4j-impl</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
