--- a/pom.xml
+++ b/pom.xml
@@ -35,21 +35,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <dependency.locations.enabled>false</dependency.locations.enabled>
         <maven.version>3.3.9</maven.version>
-        <owasp.check.skip>true</owasp.check.skip>
+        <owasp.check.skip>false</owasp.check.skip>
 
-        <activemq-client.version>5.16.0</activemq-client.version>
+        <activemq-client.version>5.16.3</activemq-client.version>
         <asm.version>7.0</asm.version>
         <byte-buddy.version>1.9.7</byte-buddy.version>
         <cloning.version>1.9.12</cloning.version>
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
         <commons-collections.version>3.2.2</commons-collections.version>
-        <commons-io.version>2.6</commons-io.version>
-        <commons-lang.version>2.3</commons-lang.version>
-        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-logging.version>1.2</commons-logging.version>
         <consul-client.version>1.5.2</consul-client.version>
         <elasticsearch.version>6.6.2</elasticsearch.version>
-        <empire-rdf4j.version>1.9.14</empire-rdf4j.version>
         <flink.version>1.13.5</flink.version>
         <fogsy-qudt.version>1.0</fogsy-qudt.version>
         <fst.version>2.56</fst.version>
@@ -61,10 +59,12 @@
         <httpcore-osgi.version>4.4.9</httpcore-osgi.version>
         <influxdb.version>2.21</influxdb.version>
         <j2html.version>1.4.0</j2html.version>
-        <jackson.version>2.12.3</jackson.version>
+        <jackson.version>2.13.1</jackson.version>
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
+        <jakarta-activation-api.version>1.2.2</jakarta-activation-api.version>
         <jakarta-mail.version>1.6.7</jakarta-mail.version>
         <jakarta-validation.version>2.0.2</jakarta-validation.version>
+        <jakarta-xml-bind-api.version>2.3.3</jakarta-xml-bind-api.version>
         <javapoet.version>1.6.1</javapoet.version>
         <javax-annotation.version>1.3.2</javax-annotation.version>
         <javax-json.version>1.0.2</javax-json.version>
@@ -97,7 +97,7 @@
         <rendersnake.version>1.8</rendersnake.version>
         <retrofit.version>2.5.0</retrofit.version>
         <shiro.version>1.7.0</shiro.version>
-        <siddhi.version>5.1.16</siddhi.version>
+        <siddhi.version>5.1.20</siddhi.version>
         <slf4j.version>1.7.30</slf4j.version>
         <snakeyaml.version>1.26</snakeyaml.version>
         <snappy-java.version>1.1.7.7</snappy-java.version>
@@ -105,7 +105,7 @@
         <spring.version>5.3.13</spring.version>
         <spring-boot.version>2.5.5</spring-boot.version>
         <spring-security.version>5.6.0</spring-security.version>
-        <swagger.version>2.1.6</swagger.version>
+        <swagger.version>2.1.11</swagger.version>
         <type-parser.version>0.6.0</type-parser.version>
         <underscore.version>1.47</underscore.version>
         <wildfly-common.version>1.5.2.Final</wildfly-common.version>
@@ -123,7 +123,7 @@
         <maven.dependency.plugin.version>3.1.1</maven.dependency.plugin.version>
         <maven.jar.plugin.version>3.1.2</maven.jar.plugin.version>
         <maven.source.plugin.version>3.1.0</maven.source.plugin.version>
-        <maven.dependency.check.plugin.version>5.2.2</maven.dependency.check.plugin.version>
+        <maven.dependency.check.plugin.version>6.5.1</maven.dependency.check.plugin.version>
         <maven.shade.plugin.version>3.2.3</maven.shade.plugin.version>
     </properties>
 
@@ -261,11 +261,6 @@
                 <version>${commons-io.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons-lang.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>commons-logging</groupId>
                 <artifactId>commons-logging</artifactId>
                 <version>${commons-logging.version}</version>
@@ -321,6 +316,11 @@
                 <version>${swagger.version}</version>
             </dependency>
             <dependency>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
+                <version>${jakarta-activation-api.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>jakarta.annotation</groupId>
                 <artifactId>jakarta.annotation-api</artifactId>
                 <version>${jakarta-annotation.version}</version>
@@ -334,6 +334,11 @@
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
                 <version>${javax-annotation.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jakarta-xml-bind-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.persistence</groupId>
@@ -759,16 +764,6 @@
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>1.26</version>
-            </dependency>
-            <dependency>
-                <groupId>io.fogsy</groupId>
-                <artifactId>empire-annotations</artifactId>
-                <version>${empire-rdf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.fogsy</groupId>
-                <artifactId>empire-api</artifactId>
-                <version>${empire-rdf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.fogsy</groupId>
